2020-03-21  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-sh-handle-write-region): Copy to temp file
	only if FILENAME exists.  (Bug#40156)

2020-02-27  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.2 released.

	* tramp.el (tramp-handle-file-modes):
	* tramp-adb.el (tramp-adb-handle-set-file-modes)
	(tramp-adb-handle-set-file-times):
	* tramp-gvfs.el (tramp-gvfs-handle-set-file-modes)
	(tramp-gvfs-handle-set-file-times):
	* tramp-sh.el (tramp-sh-handle-set-file-modes)
	(tramp-sh-handle-set-file-times):
	* tramp-smb.el (tramp-smb-handle-set-file-modes):
	* tramp-sudoedit.el (tramp-sudoedit-handle-set-file-modes):
	(tramp-sudoedit-handle-set-file-times): Add optional _FLAG.

2020-02-13  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-interrupt-process): Improve command.

2020-02-11  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-read-passwd):
	Use `tramp-compat-temporary-file-directory'.  (Bug#39389, Bug#39489)

2020-02-10  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-shell-command): Fix `window-start' in
	output buffer.  (Bug#39171)

2020-02-07  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-open-shell): Read prompt when moving "~/.editrc".

2020-02-05  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-gvfs.el (tramp-gvfs-handle-file-system-info): Fix error.

	* tramp-sh.el (tramp-sh-extra-args): Add "-noediting" as bash arg.
	(tramp-open-shell):  Provide proper "~/.editrc" if needed.  (Bug#39399)

2020-02-04  Mattias Engdegård  <mattiase@acm.org>

	* tramp-cache.el (tramp-flush-connection-properties)
	(tramp-list-connections): Replace add-to-list with push.  (Bug#39373)

2020-02-01  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-shell-command):
	Handle `shell-command-dont-erase-buffer'.  (Bug#39067)

2020-01-28  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.4.3.1 released.

2020-01-27  Michael Albinus  <michael.albinus@gmx.de>
