@@ -1,3 +1,9 @@
+2020-03-28  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-adb.el (tramp-adb-handle-write-region):
+	* tramp-smb.el (tramp-smb-handle-write-region): Flush the cache
+	after the file has been written.
+
 2020-03-21  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-sh.el (tramp-sh-handle-write-region): Copy to temp file
